--- a/indexback.html
+++ b/indexback.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="styleback.css">
 </head>
 <body id="gradient">
-	<h1>Cool Generator</h1>
+	<h1>Background Generator</h1>
 	<input class="color1" type="color" name="color1" value="#00ff00">
 	<button id="enter">Random</button>
 	<input class="color2" type="color" name="color2" value="#ff0000">
